WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
174561
clientX/clientY on TouchEvent.touches are wrong
https://bugs.webkit.org/show_bug.cgi?id=174561
Summary
clientX/clientY on TouchEvent.touches are wrong
Simon Fraser (smfr)
Reported
2017-07-15 21:39:16 PDT
clientX/clientY on TouchEvent.touches are wrong
Attachments
Patch
(10.00 KB, patch)
2017-07-15 21:40 PDT
,
Simon Fraser (smfr)
thorton
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews124 for ios-simulator-wk2
(980.84 KB, application/zip)
2017-07-16 00:38 PDT
,
Build Bot
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2017-07-15 21:40:57 PDT
Created
attachment 315593
[details]
Patch
Simon Fraser (smfr)
Comment 2
2017-07-15 21:41:23 PDT
rdar://problem/33336041
Build Bot
Comment 3
2017-07-16 00:38:14 PDT
Comment on
attachment 315593
[details]
Patch
Attachment 315593
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/4129364
New failing tests: storage/websql/execute-sql-rowsAffected.html http/tests/canvas/philip/tests/security.pattern.canvas.fillStyle.html
Build Bot
Comment 4
2017-07-16 00:38:16 PDT
Created
attachment 315596
[details]
Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.5
Simon Fraser (smfr)
Comment 5
2017-07-17 13:26:25 PDT
https://trac.webkit.org/r219571
Darin Adler
Comment 6
2017-07-18 18:26:29 PDT
Comment on
attachment 315593
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=315593&action=review
> Source/WebCore/dom/MouseRelatedEvent.h:69 > + static FrameView* frameViewFromDOMWindow(DOMWindow*);
This seems inferior to the old frameView function. Harder to call, never used in a way that is any different from what the old function would have done since it’s always passed view(). I don’t understand why we changed this.
Simon Fraser (smfr)
Comment 7
2017-07-18 18:53:42 PDT
(In reply to Darin Adler from
comment #6
)
> Comment on
attachment 315593
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=315593&action=review
> > > Source/WebCore/dom/MouseRelatedEvent.h:69 > > + static FrameView* frameViewFromDOMWindow(DOMWindow*); > > This seems inferior to the old frameView function. Harder to call, never > used in a way that is any different from what the old function would have > done since it’s always passed view(). I don’t understand why we changed this.
It's called from Apple internal code that's inserted via WebKitAdditions for touch handling, in classes that don't inherit from MouseRelatedEvent (or have one).
Darin Adler
Comment 8
2017-07-18 22:52:13 PDT
(In reply to Simon Fraser (smfr) from
comment #7
)
> > This seems inferior to the old frameView function. Harder to call, never > > used in a way that is any different from what the old function would have > > done since it’s always passed view(). I don’t understand why we changed this. > > It's called from Apple internal code
Got it.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug