clientX/clientY on TouchEvent.touches are wrong https://bugs.webkit.org/show_bug.cgi?id=174561 Source/WebCore:

rdar://problem/33336041

Reviewed by Tim Horton.

Do some refactoring so that WebKitAdditions code that computes Touch coordinates can use
the same code that MouseRelatedEvent uses.

There is no behavior change in this patch, but the test exercises a behavior change in
WebKitAdditions code.

Test: fast/events/touch/ios/touches-client-coords-after-zoom.html

* dom/MouseRelatedEvent.cpp:
(WebCore::MouseRelatedEvent::init):
(WebCore::MouseRelatedEvent::frameViewFromDOMWindow):
(WebCore::MouseRelatedEvent::pagePointToClientPoint):
(WebCore::MouseRelatedEvent::pagePointToAbsolutePoint):
(WebCore::MouseRelatedEvent::initCoordinates):
(WebCore::MouseRelatedEvent::documentToAbsoluteScaleFactor):
(WebCore::MouseRelatedEvent::computePageLocation):
(WebCore::MouseRelatedEvent::locationInRootViewCoordinates):
(WebCore::MouseRelatedEvent::frameView): Deleted.
* dom/MouseRelatedEvent.h:

LayoutTests:

Reviewed by Tim Horton.

* fast/events/touch/ios/touches-client-coords-after-zoom-expected.txt: Added.
* fast/events/touch/ios/touches-client-coords-after-zoom.html: Added.

Canonical link: https://commits.webkit.org/191391@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@219571 268f45cc-cd09-0410-ab3c-d52691b4dbfc